--- a/games/launcher/game/pom.xml
+++ b/games/launcher/game/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.s111.bachelor</groupId>
-    <artifactId>launcher-frontend</artifactId>
+    <artifactId>launcher</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,7 +19,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.s111.bachelor.pong.Application</mainClass>
+                            <mainClass>com.github.s111.bachelor.launcher.Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
