Changed directory structure to match that of the develop branch

--- a/games/quizzer/game/pom.xml
+++ b/games/quizzer/game/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.s111.bachelor</groupId>
-    <artifactId>pong</artifactId>
+    <artifactId>quizzer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,7 +19,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.s111.bachelor.pong.Application</mainClass>
+                            <mainClass>com.github.s111.bachelor.quizzer.Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -67,11 +67,6 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-container-grizzly</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-container-grizzly-server</artifactId>
             <version>1.9</version>
         </dependency>
@@ -86,5 +81,6 @@
             <version>1.0.1</version>
         </dependency>
     </dependencies>
+
 
 </project>
