--- a/games/pong/game/pom.xml
+++ b/games/pong/game/pom.xml
@@ -66,8 +66,8 @@
             <version>1.9</version>
         </dependency>
         <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
