Implemented new color palette in Launcher

--- a/games/launcher/game/package.json
+++ b/games/launcher/game/package.json
@@ -7,7 +7,7 @@
     "main": "index.html",
     "window": {
         "fullscreen": true,
-        "toolbar": true,
+        "toolbar": false,
         "frame": false
     }
 }
